// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sku-webpack-plugin build should create valid app 1`] = `
"<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width,initial-scale=1"
    >
    <script
      defer="defer"
      src="main.js"
    >
    </script>
    <link
      href="main.css"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>"
POST HYDRATE DIFFS: 
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -20,5 +20,18 @@
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html._1w7ogsyz,html._1w7ogsyz body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="_7blx2v0 _84yl1918 _84yl191b">
+        <div class="jwlevk0 _1w7ogsy7i _1w7ogsy6e _1w7ogsy9q _1w7ogsy8m _1w7ogsy5e _84yl1918 _84yl191b _1w7ogsy32 _1w7ogsy35">
+          <span class="jwlevk0 _1w7ogsy4y _84yl190 _84yl191 _84yl1921 uo8yjc4 _84yl19d">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;

exports[`sku-webpack-plugin build should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": .jwlevk0 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
[data-braid-hidefocusrings] .jwlevk0 {
  outline: none;
}
.jwlevk1 {
  display: block;
}
.jwlevk2 {
  line-height: 1;
}
.jwlevk3 {
  list-style: none;
}
.jwlevk4 {
  quotes: none;
}
.jwlevk4:after,
.jwlevk4:before {
  content: "";
}
.jwlevk5 {
  border-collapse: collapse;
  border-spacing: 0;
}
.jwlevk6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}
.jwlevk7 {
  background-color: transparent;
}
.jwlevk9 {
  color: inherit;
}
.jwlevka:disabled {
  opacity: 1;
}
.jwlevka::-ms-expand {
  display: none;
}
.jwlevkc[type="number"] {
  -moz-appearance: textfield;
}
.jwlevkc[type="number"]::-webkit-inner-spin-button,
.jwlevkc[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
.jwlevkc::-ms-clear {
  display: none;
}
.jwlevkc::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
.jwlevkf {
  color: inherit;
  text-decoration: none;
}
._1w7ogsy0 {
  overflow: hidden;
}
._1w7ogsy1 {
  overflow: scroll;
}
._1w7ogsy2 {
  overflow: visible;
}
._1w7ogsy3 {
  overflow: auto;
}
._1w7ogsy4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}
._1w7ogsy5 {
  outline: none;
}
._1w7ogsy6 {
  opacity: 0;
}
._1w7ogsy7 {
  z-index: 0;
}
._1w7ogsy8 {
  z-index: 1;
}
._1w7ogsy9 {
  z-index: 2;
}
._1w7ogsya {
  z-index: 90;
}
._1w7ogsyb {
  z-index: 100;
}
._1w7ogsyc {
  z-index: 200;
}
._1w7ogsyd {
  z-index: 290;
}
._1w7ogsye {
  z-index: 300;
}
._1w7ogsyf {
  z-index: 400;
}
._1w7ogsyg {
  cursor: default;
}
._1w7ogsyh {
  cursor: pointer;
}
._1w7ogsyi {
  pointer-events: none;
}
._1w7ogsyj {
  top: 0;
}
._1w7ogsyk {
  bottom: 0;
}
._1w7ogsyl {
  left: 0;
}
._1w7ogsym {
  right: 0;
}
._1w7ogsyn {
  height: 100%;
}
._1w7ogsyo {
  height: var(--_13kdy779);
}
._1w7ogsyp {
  width: 100%;
}
._1w7ogsyq {
  width: var(--_13kdy779);
}
._1w7ogsyr {
  min-width: 0;
}
._1w7ogsys {
  max-width: var(--_13kdy7711);
}
._1w7ogsyt {
  max-width: var(--_13kdy7712);
}
._1w7ogsyu {
  max-width: var(--_13kdy7713);
}
._1w7ogsyv {
  max-width: var(--_13kdy7714);
}
._1w7ogsyw {
  transition: var(--_13kdy775i);
}
._1w7ogsyx {
  transition: var(--_13kdy775j);
}
._1w7ogsyy:active {
  transform: var(--_13kdy775k);
}
html._1w7ogsyz ._1w7ogsy11,
html:not(._1w7ogsyz) ._1w7ogsy10 {
  background: var(--_13kdy771t);
}
html._1w7ogsyz ._1w7ogsy13,
html:not(._1w7ogsyz) ._1w7ogsy12 {
  background: var(--_13kdy771u);
}
html._1w7ogsyz ._1w7ogsy15,
html:not(._1w7ogsyz) ._1w7ogsy14 {
  background: var(--_13kdy771v);
}
html._1w7ogsyz ._1w7ogsy17,
html:not(._1w7ogsyz) ._1w7ogsy16 {
  background: var(--_13kdy771w);
}
html._1w7ogsyz ._1w7ogsy19,
html:not(._1w7ogsyz) ._1w7ogsy18 {
  background: var(--_13kdy771x);
}
html._1w7ogsyz ._1w7ogsy1b,
html:not(._1w7ogsyz) ._1w7ogsy1a {
  background: var(--_13kdy771y);
}
html._1w7ogsyz ._1w7ogsy1d,
html:not(._1w7ogsyz) ._1w7ogsy1c {
  background: var(--_13kdy771z);
}
html._1w7ogsyz ._1w7ogsy1f,
html:not(._1w7ogsyz) ._1w7ogsy1e {
  background: var(--_13kdy7720);
}
html._1w7ogsyz ._1w7ogsy1h,
html:not(._1w7ogsyz) ._1w7ogsy1g {
  background: var(--_13kdy7721);
}
html._1w7ogsyz ._1w7ogsy1j,
html:not(._1w7ogsyz) ._1w7ogsy1i {
  background: var(--_13kdy7722);
}
html._1w7ogsyz ._1w7ogsy1l,
html:not(._1w7ogsyz) ._1w7ogsy1k {
  background: var(--_13kdy7723);
}
html._1w7ogsyz ._1w7ogsy1n,
html:not(._1w7ogsyz) ._1w7ogsy1m {
  background: var(--_13kdy7724);
}
html._1w7ogsyz ._1w7ogsy1p,
html:not(._1w7ogsyz) ._1w7ogsy1o {
  background: var(--_13kdy7725);
}
html._1w7ogsyz ._1w7ogsy1r,
html:not(._1w7ogsyz) ._1w7ogsy1q {
  background: var(--_13kdy7726);
}
html._1w7ogsyz ._1w7ogsy1t,
html:not(._1w7ogsyz) ._1w7ogsy1s {
  background: var(--_13kdy7727);
}
html._1w7ogsyz ._1w7ogsy1v,
html:not(._1w7ogsyz) ._1w7ogsy1u {
  background: var(--_13kdy7728);
}
html._1w7ogsyz ._1w7ogsy1x,
html:not(._1w7ogsyz) ._1w7ogsy1w {
  background: var(--_13kdy7729);
}
html._1w7ogsyz ._1w7ogsy1z,
html:not(._1w7ogsyz) ._1w7ogsy1y {
  background: var(--_13kdy772a);
}
html._1w7ogsyz ._1w7ogsy21,
html:not(._1w7ogsyz) ._1w7ogsy20 {
  background: var(--_13kdy772b);
}
html._1w7ogsyz ._1w7ogsy23,
html:not(._1w7ogsyz) ._1w7ogsy22 {
  background: var(--_13kdy772c);
}
html._1w7ogsyz ._1w7ogsy25,
html:not(._1w7ogsyz) ._1w7ogsy24 {
  background: var(--_13kdy772d);
}
html._1w7ogsyz ._1w7ogsy27,
html:not(._1w7ogsyz) ._1w7ogsy26 {
  background: var(--_13kdy772e);
}
html._1w7ogsyz ._1w7ogsy29,
html:not(._1w7ogsyz) ._1w7ogsy28 {
  background: var(--_13kdy772f);
}
html._1w7ogsyz ._1w7ogsy2b,
html:not(._1w7ogsyz) ._1w7ogsy2a {
  background: var(--_13kdy772g);
}
html._1w7ogsyz ._1w7ogsy2d,
html:not(._1w7ogsyz) ._1w7ogsy2c {
  background: var(--_13kdy772h);
}
html._1w7ogsyz ._1w7ogsy2f,
html:not(._1w7ogsyz) ._1w7ogsy2e {
  background: var(--_13kdy772i);
}
html._1w7ogsyz ._1w7ogsy2h,
html:not(._1w7ogsyz) ._1w7ogsy2g {
  background: var(--_13kdy772j);
}
html._1w7ogsyz ._1w7ogsy2j,
html:not(._1w7ogsyz) ._1w7ogsy2i {
  background: var(--_13kdy772k);
}
html._1w7ogsyz ._1w7ogsy2l,
html:not(._1w7ogsyz) ._1w7ogsy2k {
  background: var(--_13kdy772l);
}
html._1w7ogsyz ._1w7ogsy2n,
html:not(._1w7ogsyz) ._1w7ogsy2m {
  background: var(--_13kdy772m);
}
html._1w7ogsyz ._1w7ogsy2p,
html:not(._1w7ogsyz) ._1w7ogsy2o {
  background: var(--_13kdy772n);
}
html._1w7ogsyz ._1w7ogsy2r,
html:not(._1w7ogsyz) ._1w7ogsy2q {
  background: var(--_13kdy772o);
}
html._1w7ogsyz ._1w7ogsy2t,
html:not(._1w7ogsyz) ._1w7ogsy2s {
  background: var(--_13kdy772p);
}
html._1w7ogsyz ._1w7ogsy2v,
html:not(._1w7ogsyz) ._1w7ogsy2u {
  background: var(--_13kdy772q);
}
html._1w7ogsyz ._1w7ogsy2x,
html:not(._1w7ogsyz) ._1w7ogsy2w {
  background: var(--_13kdy772r);
}
html._1w7ogsyz ._1w7ogsy2z,
html:not(._1w7ogsyz) ._1w7ogsy2y {
  background: var(--_13kdy772s);
}
html._1w7ogsyz ._1w7ogsy31,
html:not(._1w7ogsyz) ._1w7ogsy30 {
  background: var(--_13kdy772t);
}
html._1w7ogsyz ._1w7ogsy33,
html:not(._1w7ogsyz) ._1w7ogsy32 {
  background: var(--_13kdy772u);
}
html._1w7ogsyz ._1w7ogsy35,
html:not(._1w7ogsyz) ._1w7ogsy34 {
  background: var(--_13kdy772v);
}
html._1w7ogsyz ._1w7ogsy37,
html:not(._1w7ogsyz) ._1w7ogsy36 {
  box-shadow: var(--_13kdy775l);
}
html._1w7ogsyz ._1w7ogsy39,
html:not(._1w7ogsyz) ._1w7ogsy38 {
  box-shadow: var(--_13kdy775m);
}
html._1w7ogsyz ._1w7ogsy3b,
html:not(._1w7ogsyz) ._1w7ogsy3a {
  box-shadow: var(--_13kdy775n);
}
html._1w7ogsyz ._1w7ogsy3d,
html:not(._1w7ogsyz) ._1w7ogsy3c {
  box-shadow: inset 0 0 0 var(--_13kdy77y) var(--_13kdy77f);
}
html._1w7ogsyz ._1w7ogsy3f,
html:not(._1w7ogsyz) ._1w7ogsy3e {
  box-shadow: inset 0 0 0 var(--_13kdy77y) var(--_13kdy77g);
}
html._1w7ogsyz ._1w7ogsy3h,
html:not(._1w7ogsyz) ._1w7ogsy3g {
  box-shadow: inset 0 0 0 var(--_13kdy77z) var(--_13kdy77f);
}
html._1w7ogsyz ._1w7ogsy3j,
html:not(._1w7ogsyz) ._1w7ogsy3i {
  box-shadow: inset 0 0 0 var(--_13kdy77z) var(--_13kdy77g);
}
html._1w7ogsyz ._1w7ogsy3l,
html:not(._1w7ogsyz) ._1w7ogsy3k {
  box-shadow: inset 0 0 0 var(--_13kdy77y) var(--_13kdy77h);
}
html._1w7ogsyz ._1w7ogsy3n,
html:not(._1w7ogsyz) ._1w7ogsy3m {
  box-shadow: inset 0 0 0 var(--_13kdy77y) var(--_13kdy77i);
}
html._1w7ogsyz ._1w7ogsy3p,
html:not(._1w7ogsyz) ._1w7ogsy3o {
  box-shadow: inset 0 0 0 var(--_13kdy77y) var(--_13kdy77j);
}
html._1w7ogsyz ._1w7ogsy3r,
html:not(._1w7ogsyz) ._1w7ogsy3q {
  box-shadow: inset 0 0 0 var(--_13kdy77z) var(--_13kdy77j);
}
html._1w7ogsyz ._1w7ogsy3t,
html:not(._1w7ogsyz) ._1w7ogsy3s {
  box-shadow: inset 0 0 0 var(--_13kdy77y) var(--_13kdy77k);
}
html._1w7ogsyz ._1w7ogsy3v,
html:not(._1w7ogsyz) ._1w7ogsy3u {
  box-shadow: inset 0 0 0 var(--_13kdy77z) var(--_13kdy77k);
}
html._1w7ogsyz ._1w7ogsy3x,
html:not(._1w7ogsyz) ._1w7ogsy3w {
  box-shadow: inset 0 0 0 var(--_13kdy77y) var(--_13kdy77l);
}
html._1w7ogsyz ._1w7ogsy3z,
html:not(._1w7ogsyz) ._1w7ogsy3y {
  box-shadow: inset 0 0 0 var(--_13kdy77y) var(--_13kdy77n);
}
html._1w7ogsyz ._1w7ogsy41,
html:not(._1w7ogsyz) ._1w7ogsy40 {
  box-shadow: inset 0 0 0 var(--_13kdy77z) var(--_13kdy77n);
}
html._1w7ogsyz ._1w7ogsy43,
html:not(._1w7ogsyz) ._1w7ogsy42 {
  box-shadow: inset 0 0 0 var(--_13kdy77y) var(--_13kdy77o);
}
html._1w7ogsyz ._1w7ogsy45,
html:not(._1w7ogsyz) ._1w7ogsy44 {
  box-shadow: inset 0 0 0 var(--_13kdy77z) var(--_13kdy77o);
}
html._1w7ogsyz ._1w7ogsy47,
html:not(._1w7ogsyz) ._1w7ogsy46 {
  box-shadow: inset 0 0 0 var(--_13kdy77y) var(--_13kdy77p);
}
html._1w7ogsyz ._1w7ogsy49,
html:not(._1w7ogsyz) ._1w7ogsy48 {
  box-shadow: inset 0 0 0 var(--_13kdy77y) var(--_13kdy77q);
}
html._1w7ogsyz ._1w7ogsy4b,
html:not(._1w7ogsyz) ._1w7ogsy4a {
  box-shadow: inset 0 0 0 var(--_13kdy77y) var(--_13kdy77r);
}
html._1w7ogsyz ._1w7ogsy4d,
html:not(._1w7ogsyz) ._1w7ogsy4c {
  box-shadow: inset 0 0 0 var(--_13kdy77z) var(--_13kdy77r);
}
html._1w7ogsyz ._1w7ogsy4f,
html:not(._1w7ogsyz) ._1w7ogsy4e {
  box-shadow: inset 0 0 0 var(--_13kdy77y) var(--_13kdy77s);
}
html._1w7ogsyz ._1w7ogsy4h,
html:not(._1w7ogsyz) ._1w7ogsy4g {
  box-shadow: inset 0 0 0 var(--_13kdy77z) var(--_13kdy77s);
}
html._1w7ogsyz ._1w7ogsy4j,
html:not(._1w7ogsyz) ._1w7ogsy4i {
  box-shadow: inset 0 0 0 var(--_13kdy77y) var(--_13kdy77t);
}
html._1w7ogsyz ._1w7ogsy4l,
html:not(._1w7ogsyz) ._1w7ogsy4k {
  box-shadow: inset 0 0 0 var(--_13kdy77y) var(--_13kdy77u);
}
html._1w7ogsyz ._1w7ogsy4n,
html:not(._1w7ogsyz) ._1w7ogsy4m {
  box-shadow: inset 0 0 0 var(--_13kdy77y) var(--_13kdy77v);
}
html._1w7ogsyz ._1w7ogsy4p,
html:not(._1w7ogsyz) ._1w7ogsy4o {
  box-shadow: inset 0 0 0 var(--_13kdy77y) var(--_13kdy77w);
}
html._1w7ogsyz ._1w7ogsy4r,
html:not(._1w7ogsyz) ._1w7ogsy4q {
  box-shadow: inset 0 0 0 var(--_13kdy77y) var(--_13kdy77x);
}
html._1w7ogsyz ._1w7ogsy4t,
html:not(._1w7ogsyz) ._1w7ogsy4s {
  box-shadow: 0 0 0 var(--_13kdy7710) var(--_13kdy77m);
}
._1w7ogsy4u {
  display: none;
}
._1w7ogsy4y {
  display: block;
}
._1w7ogsy52 {
  display: inline;
}
._1w7ogsy56 {
  display: inline-block;
}
._1w7ogsy5a {
  display: flex;
}
._1w7ogsy5e {
  position: relative;
}
._1w7ogsy5i {
  position: absolute;
}
._1w7ogsy5m {
  position: fixed;
}
._1w7ogsy5q {
  border-radius: 0;
}
._1w7ogsy5u {
  border-radius: 9999px;
}
._1w7ogsy5y {
  border-radius: var(--_13kdy77b);
}
._1w7ogsy62 {
  border-radius: var(--_13kdy77c);
}
._1w7ogsy66 {
  border-radius: var(--_13kdy77d);
}
._1w7ogsy6a {
  border-radius: var(--_13kdy77e);
}
._1w7ogsy6e {
  padding-top: var(--_13kdy770);
}
._1w7ogsy6i {
  padding-top: var(--_13kdy771);
}
._1w7ogsy6m {
  padding-top: var(--_13kdy772);
}
._1w7ogsy6q {
  padding-top: var(--_13kdy773);
}
._1w7ogsy6u {
  padding-top: var(--_13kdy774);
}
._1w7ogsy6y {
  padding-top: var(--_13kdy775);
}
._1w7ogsy72 {
  padding-top: var(--_13kdy776);
}
._1w7ogsy76 {
  padding-top: var(--_13kdy777);
}
._1w7ogsy7a {
  padding-top: var(--_13kdy778);
}
._1w7ogsy7e {
  padding-top: 0;
}
._1w7ogsy7i {
  padding-bottom: var(--_13kdy770);
}
._1w7ogsy7m {
  padding-bottom: var(--_13kdy771);
}
._1w7ogsy7q {
  padding-bottom: var(--_13kdy772);
}
._1w7ogsy7u {
  padding-bottom: var(--_13kdy773);
}
._1w7ogsy7y {
  padding-bottom: var(--_13kdy774);
}
._1w7ogsy82 {
  padding-bottom: var(--_13kdy775);
}
._1w7ogsy86 {
  padding-bottom: var(--_13kdy776);
}
._1w7ogsy8a {
  padding-bottom: var(--_13kdy777);
}
._1w7ogsy8e {
  padding-bottom: var(--_13kdy778);
}
._1w7ogsy8i {
  padding-bottom: 0;
}
._1w7ogsy8m {
  padding-right: var(--_13kdy770);
}
._1w7ogsy8q {
  padding-right: var(--_13kdy771);
}
._1w7ogsy8u {
  padding-right: var(--_13kdy772);
}
._1w7ogsy8y {
  padding-right: var(--_13kdy773);
}
._1w7ogsy92 {
  padding-right: var(--_13kdy774);
}
._1w7ogsy96 {
  padding-right: var(--_13kdy775);
}
._1w7ogsy9a {
  padding-right: var(--_13kdy776);
}
._1w7ogsy9e {
  padding-right: var(--_13kdy777);
}
._1w7ogsy9i {
  padding-right: var(--_13kdy778);
}
._1w7ogsy9m {
  padding-right: 0;
}
._1w7ogsy9q {
  padding-left: var(--_13kdy770);
}
._1w7ogsy9u {
  padding-left: var(--_13kdy771);
}
._1w7ogsy9y {
  padding-left: var(--_13kdy772);
}
._1w7ogsya2 {
  padding-left: var(--_13kdy773);
}
._1w7ogsya6 {
  padding-left: var(--_13kdy774);
}
._1w7ogsyaa {
  padding-left: var(--_13kdy775);
}
._1w7ogsyae {
  padding-left: var(--_13kdy776);
}
._1w7ogsyai {
  padding-left: var(--_13kdy777);
}
._1w7ogsyam {
  padding-left: var(--_13kdy778);
}
._1w7ogsyaq {
  padding-left: 0;
}
._1w7ogsyau {
  margin-top: var(--_13kdy770);
}
._1w7ogsyay {
  margin-top: var(--_13kdy771);
}
._1w7ogsyb2 {
  margin-top: var(--_13kdy772);
}
._1w7ogsyb6 {
  margin-top: var(--_13kdy773);
}
._1w7ogsyba {
  margin-top: var(--_13kdy774);
}
._1w7ogsybe {
  margin-top: var(--_13kdy775);
}
._1w7ogsybi {
  margin-top: var(--_13kdy776);
}
._1w7ogsybm {
  margin-top: var(--_13kdy777);
}
._1w7ogsybq {
  margin-top: var(--_13kdy778);
}
._1w7ogsybu {
  margin-top: 0;
}
._1w7ogsyby {
  margin-bottom: var(--_13kdy770);
}
._1w7ogsyc2 {
  margin-bottom: var(--_13kdy771);
}
._1w7ogsyc6 {
  margin-bottom: var(--_13kdy772);
}
._1w7ogsyca {
  margin-bottom: var(--_13kdy773);
}
._1w7ogsyce {
  margin-bottom: var(--_13kdy774);
}
._1w7ogsyci {
  margin-bottom: var(--_13kdy775);
}
._1w7ogsycm {
  margin-bottom: var(--_13kdy776);
}
._1w7ogsycq {
  margin-bottom: var(--_13kdy777);
}
._1w7ogsycu {
  margin-bottom: var(--_13kdy778);
}
._1w7ogsycy {
  margin-bottom: 0;
}
._1w7ogsyd2 {
  margin-right: var(--_13kdy770);
}
._1w7ogsyd6 {
  margin-right: var(--_13kdy771);
}
._1w7ogsyda {
  margin-right: var(--_13kdy772);
}
._1w7ogsyde {
  margin-right: var(--_13kdy773);
}
._1w7ogsydi {
  margin-right: var(--_13kdy774);
}
._1w7ogsydm {
  margin-right: var(--_13kdy775);
}
._1w7ogsydq {
  margin-right: var(--_13kdy776);
}
._1w7ogsydu {
  margin-right: var(--_13kdy777);
}
._1w7ogsydy {
  margin-right: var(--_13kdy778);
}
._1w7ogsye2 {
  margin-right: 0;
}
._1w7ogsye6 {
  margin-left: var(--_13kdy770);
}
._1w7ogsyea {
  margin-left: var(--_13kdy771);
}
._1w7ogsyee {
  margin-left: var(--_13kdy772);
}
._1w7ogsyei {
  margin-left: var(--_13kdy773);
}
._1w7ogsyem {
  margin-left: var(--_13kdy774);
}
._1w7ogsyeq {
  margin-left: var(--_13kdy775);
}
._1w7ogsyeu {
  margin-left: var(--_13kdy776);
}
._1w7ogsyey {
  margin-left: var(--_13kdy777);
}
._1w7ogsyf2 {
  margin-left: var(--_13kdy778);
}
._1w7ogsyf6 {
  margin-left: 0;
}
._1w7ogsyfa {
  align-items: flex-start;
}
._1w7ogsyfe {
  align-items: center;
}
._1w7ogsyfi {
  align-items: flex-end;
}
._1w7ogsyfm {
  justify-content: flex-start;
}
._1w7ogsyfq {
  justify-content: center;
}
._1w7ogsyfu {
  justify-content: flex-end;
}
._1w7ogsyfy {
  justify-content: space-between;
}
._1w7ogsyg2 {
  flex-direction: row;
}
._1w7ogsyg6 {
  flex-direction: row-reverse;
}
._1w7ogsyga {
  flex-direction: column;
}
._1w7ogsyge {
  flex-direction: column-reverse;
}
._1w7ogsygi {
  flex-wrap: wrap;
}
._1w7ogsygm {
  flex-wrap: nowrap;
}
._1w7ogsygq {
  flex-shrink: 0;
}
._1w7ogsygu {
  flex-grow: 0;
}
._1w7ogsygy {
  flex-grow: 1;
}
._1w7ogsyh2 {
  text-align: left;
}
._1w7ogsyh6 {
  text-align: center;
}
._1w7ogsyha {
  text-align: right;
}
@media screen and (min-width: 740px) {
  ._1w7ogsy4v {
    display: none;
  }
  ._1w7ogsy4z {
    display: block;
  }
  ._1w7ogsy53 {
    display: inline;
  }
  ._1w7ogsy57 {
    display: inline-block;
  }
  ._1w7ogsy5b {
    display: flex;
  }
  ._1w7ogsy5f {
    position: relative;
  }
  ._1w7ogsy5j {
    position: absolute;
  }
  ._1w7ogsy5n {
    position: fixed;
  }
  ._1w7ogsy5r {
    border-radius: 0;
  }
  ._1w7ogsy5v {
    border-radius: 9999px;
  }
  ._1w7ogsy5z {
    border-radius: var(--_13kdy77b);
  }
  ._1w7ogsy63 {
    border-radius: var(--_13kdy77c);
  }
  ._1w7ogsy67 {
    border-radius: var(--_13kdy77d);
  }
  ._1w7ogsy6b {
    border-radius: var(--_13kdy77e);
  }
  ._1w7ogsy6f {
    padding-top: var(--_13kdy770);
  }
  ._1w7ogsy6j {
    padding-top: var(--_13kdy771);
  }
  ._1w7ogsy6n {
    padding-top: var(--_13kdy772);
  }
  ._1w7ogsy6r {
    padding-top: var(--_13kdy773);
  }
  ._1w7ogsy6v {
    padding-top: var(--_13kdy774);
  }
  ._1w7ogsy6z {
    padding-top: var(--_13kdy775);
  }
  ._1w7ogsy73 {
    padding-top: var(--_13kdy776);
  }
  ._1w7ogsy77 {
    padding-top: var(--_13kdy777);
  }
  ._1w7ogsy7b {
    padding-top: var(--_13kdy778);
  }
  ._1w7ogsy7f {
    padding-top: 0;
  }
  ._1w7ogsy7j {
    padding-bottom: var(--_13kdy770);
  }
  ._1w7ogsy7n {
    padding-bottom: var(--_13kdy771);
  }
  ._1w7ogsy7r {
    padding-bottom: var(--_13kdy772);
  }
  ._1w7ogsy7v {
    padding-bottom: var(--_13kdy773);
  }
  ._1w7ogsy7z {
    padding-bottom: var(--_13kdy774);
  }
  ._1w7ogsy83 {
    padding-bottom: var(--_13kdy775);
  }
  ._1w7ogsy87 {
    padding-bottom: var(--_13kdy776);
  }
  ._1w7ogsy8b {
    padding-bottom: var(--_13kdy777);
  }
  ._1w7ogsy8f {
    padding-bottom: var(--_13kdy778);
  }
  ._1w7ogsy8j {
    padding-bottom: 0;
  }
  ._1w7ogsy8n {
    padding-right: var(--_13kdy770);
  }
  ._1w7ogsy8r {
    padding-right: var(--_13kdy771);
  }
  ._1w7ogsy8v {
    padding-right: var(--_13kdy772);
  }
  ._1w7ogsy8z {
    padding-right: var(--_13kdy773);
  }
  ._1w7ogsy93 {
    padding-right: var(--_13kdy774);
  }
  ._1w7ogsy97 {
    padding-right: var(--_13kdy775);
  }
  ._1w7ogsy9b {
    padding-right: var(--_13kdy776);
  }
  ._1w7ogsy9f {
    padding-right: var(--_13kdy777);
  }
  ._1w7ogsy9j {
    padding-right: var(--_13kdy778);
  }
  ._1w7ogsy9n {
    padding-right: 0;
  }
  ._1w7ogsy9r {
    padding-left: var(--_13kdy770);
  }
  ._1w7ogsy9v {
    padding-left: var(--_13kdy771);
  }
  ._1w7ogsy9z {
    padding-left: var(--_13kdy772);
  }
  ._1w7ogsya3 {
    padding-left: var(--_13kdy773);
  }
  ._1w7ogsya7 {
    padding-left: var(--_13kdy774);
  }
  ._1w7ogsyab {
    padding-left: var(--_13kdy775);
  }
  ._1w7ogsyaf {
    padding-left: var(--_13kdy776);
  }
  ._1w7ogsyaj {
    padding-left: var(--_13kdy777);
  }
  ._1w7ogsyan {
    padding-left: var(--_13kdy778);
  }
  ._1w7ogsyar {
    padding-left: 0;
  }
  ._1w7ogsyav {
    margin-top: var(--_13kdy770);
  }
  ._1w7ogsyaz {
    margin-top: var(--_13kdy771);
  }
  ._1w7ogsyb3 {
    margin-top: var(--_13kdy772);
  }
  ._1w7ogsyb7 {
    margin-top: var(--_13kdy773);
  }
  ._1w7ogsybb {
    margin-top: var(--_13kdy774);
  }
  ._1w7ogsybf {
    margin-top: var(--_13kdy775);
  }
  ._1w7ogsybj {
    margin-top: var(--_13kdy776);
  }
  ._1w7ogsybn {
    margin-top: var(--_13kdy777);
  }
  ._1w7ogsybr {
    margin-top: var(--_13kdy778);
  }
  ._1w7ogsybv {
    margin-top: 0;
  }
  ._1w7ogsybz {
    margin-bottom: var(--_13kdy770);
  }
  ._1w7ogsyc3 {
    margin-bottom: var(--_13kdy771);
  }
  ._1w7ogsyc7 {
    margin-bottom: var(--_13kdy772);
  }
  ._1w7ogsycb {
    margin-bottom: var(--_13kdy773);
  }
  ._1w7ogsycf {
    margin-bottom: var(--_13kdy774);
  }
  ._1w7ogsycj {
    margin-bottom: var(--_13kdy775);
  }
  ._1w7ogsycn {
    margin-bottom: var(--_13kdy776);
  }
  ._1w7ogsycr {
    margin-bottom: var(--_13kdy777);
  }
  ._1w7ogsycv {
    margin-bottom: var(--_13kdy778);
  }
  ._1w7ogsycz {
    margin-bottom: 0;
  }
  ._1w7ogsyd3 {
    margin-right: var(--_13kdy770);
  }
  ._1w7ogsyd7 {
    margin-right: var(--_13kdy771);
  }
  ._1w7ogsydb {
    margin-right: var(--_13kdy772);
  }
  ._1w7ogsydf {
    margin-right: var(--_13kdy773);
  }
  ._1w7ogsydj {
    margin-right: var(--_13kdy774);
  }
  ._1w7ogsydn {
    margin-right: var(--_13kdy775);
  }
  ._1w7ogsydr {
    margin-right: var(--_13kdy776);
  }
  ._1w7ogsydv {
    margin-right: var(--_13kdy777);
  }
  ._1w7ogsydz {
    margin-right: var(--_13kdy778);
  }
  ._1w7ogsye3 {
    margin-right: 0;
  }
  ._1w7ogsye7 {
    margin-left: var(--_13kdy770);
  }
  ._1w7ogsyeb {
    margin-left: var(--_13kdy771);
  }
  ._1w7ogsyef {
    margin-left: var(--_13kdy772);
  }
  ._1w7ogsyej {
    margin-left: var(--_13kdy773);
  }
  ._1w7ogsyen {
    margin-left: var(--_13kdy774);
  }
  ._1w7ogsyer {
    margin-left: var(--_13kdy775);
  }
  ._1w7ogsyev {
    margin-left: var(--_13kdy776);
  }
  ._1w7ogsyez {
    margin-left: var(--_13kdy777);
  }
  ._1w7ogsyf3 {
    margin-left: var(--_13kdy778);
  }
  ._1w7ogsyf7 {
    margin-left: 0;
  }
  ._1w7ogsyfb {
    align-items: flex-start;
  }
  ._1w7ogsyff {
    align-items: center;
  }
  ._1w7ogsyfj {
    align-items: flex-end;
  }
  ._1w7ogsyfn {
    justify-content: flex-start;
  }
  ._1w7ogsyfr {
    justify-content: center;
  }
  ._1w7ogsyfv {
    justify-content: flex-end;
  }
  ._1w7ogsyfz {
    justify-content: space-between;
  }
  ._1w7ogsyg3 {
    flex-direction: row;
  }
  ._1w7ogsyg7 {
    flex-direction: row-reverse;
  }
  ._1w7ogsygb {
    flex-direction: column;
  }
  ._1w7ogsygf {
    flex-direction: column-reverse;
  }
  ._1w7ogsygj {
    flex-wrap: wrap;
  }
  ._1w7ogsygn {
    flex-wrap: nowrap;
  }
  ._1w7ogsygr {
    flex-shrink: 0;
  }
  ._1w7ogsygv {
    flex-grow: 0;
  }
  ._1w7ogsygz {
    flex-grow: 1;
  }
  ._1w7ogsyh3 {
    text-align: left;
  }
  ._1w7ogsyh7 {
    text-align: center;
  }
  ._1w7ogsyhb {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._1w7ogsy4w {
    display: none;
  }
  ._1w7ogsy50 {
    display: block;
  }
  ._1w7ogsy54 {
    display: inline;
  }
  ._1w7ogsy58 {
    display: inline-block;
  }
  ._1w7ogsy5c {
    display: flex;
  }
  ._1w7ogsy5g {
    position: relative;
  }
  ._1w7ogsy5k {
    position: absolute;
  }
  ._1w7ogsy5o {
    position: fixed;
  }
  ._1w7ogsy5s {
    border-radius: 0;
  }
  ._1w7ogsy5w {
    border-radius: 9999px;
  }
  ._1w7ogsy60 {
    border-radius: var(--_13kdy77b);
  }
  ._1w7ogsy64 {
    border-radius: var(--_13kdy77c);
  }
  ._1w7ogsy68 {
    border-radius: var(--_13kdy77d);
  }
  ._1w7ogsy6c {
    border-radius: var(--_13kdy77e);
  }
  ._1w7ogsy6g {
    padding-top: var(--_13kdy770);
  }
  ._1w7ogsy6k {
    padding-top: var(--_13kdy771);
  }
  ._1w7ogsy6o {
    padding-top: var(--_13kdy772);
  }
  ._1w7ogsy6s {
    padding-top: var(--_13kdy773);
  }
  ._1w7ogsy6w {
    padding-top: var(--_13kdy774);
  }
  ._1w7ogsy70 {
    padding-top: var(--_13kdy775);
  }
  ._1w7ogsy74 {
    padding-top: var(--_13kdy776);
  }
  ._1w7ogsy78 {
    padding-top: var(--_13kdy777);
  }
  ._1w7ogsy7c {
    padding-top: var(--_13kdy778);
  }
  ._1w7ogsy7g {
    padding-top: 0;
  }
  ._1w7ogsy7k {
    padding-bottom: var(--_13kdy770);
  }
  ._1w7ogsy7o {
    padding-bottom: var(--_13kdy771);
  }
  ._1w7ogsy7s {
    padding-bottom: var(--_13kdy772);
  }
  ._1w7ogsy7w {
    padding-bottom: var(--_13kdy773);
  }
  ._1w7ogsy80 {
    padding-bottom: var(--_13kdy774);
  }
  ._1w7ogsy84 {
    padding-bottom: var(--_13kdy775);
  }
  ._1w7ogsy88 {
    padding-bottom: var(--_13kdy776);
  }
  ._1w7ogsy8c {
    padding-bottom: var(--_13kdy777);
  }
  ._1w7ogsy8g {
    padding-bottom: var(--_13kdy778);
  }
  ._1w7ogsy8k {
    padding-bottom: 0;
  }
  ._1w7ogsy8o {
    padding-right: var(--_13kdy770);
  }
  ._1w7ogsy8s {
    padding-right: var(--_13kdy771);
  }
  ._1w7ogsy8w {
    padding-right: var(--_13kdy772);
  }
  ._1w7ogsy90 {
    padding-right: var(--_13kdy773);
  }
  ._1w7ogsy94 {
    padding-right: var(--_13kdy774);
  }
  ._1w7ogsy98 {
    padding-right: var(--_13kdy775);
  }
  ._1w7ogsy9c {
    padding-right: var(--_13kdy776);
  }
  ._1w7ogsy9g {
    padding-right: var(--_13kdy777);
  }
  ._1w7ogsy9k {
    padding-right: var(--_13kdy778);
  }
  ._1w7ogsy9o {
    padding-right: 0;
  }
  ._1w7ogsy9s {
    padding-left: var(--_13kdy770);
  }
  ._1w7ogsy9w {
    padding-left: var(--_13kdy771);
  }
  ._1w7ogsya0 {
    padding-left: var(--_13kdy772);
  }
  ._1w7ogsya4 {
    padding-left: var(--_13kdy773);
  }
  ._1w7ogsya8 {
    padding-left: var(--_13kdy774);
  }
  ._1w7ogsyac {
    padding-left: var(--_13kdy775);
  }
  ._1w7ogsyag {
    padding-left: var(--_13kdy776);
  }
  ._1w7ogsyak {
    padding-left: var(--_13kdy777);
  }
  ._1w7ogsyao {
    padding-left: var(--_13kdy778);
  }
  ._1w7ogsyas {
    padding-left: 0;
  }
  ._1w7ogsyaw {
    margin-top: var(--_13kdy770);
  }
  ._1w7ogsyb0 {
    margin-top: var(--_13kdy771);
  }
  ._1w7ogsyb4 {
    margin-top: var(--_13kdy772);
  }
  ._1w7ogsyb8 {
    margin-top: var(--_13kdy773);
  }
  ._1w7ogsybc {
    margin-top: var(--_13kdy774);
  }
  ._1w7ogsybg {
    margin-top: var(--_13kdy775);
  }
  ._1w7ogsybk {
    margin-top: var(--_13kdy776);
  }
  ._1w7ogsybo {
    margin-top: var(--_13kdy777);
  }
  ._1w7ogsybs {
    margin-top: var(--_13kdy778);
  }
  ._1w7ogsybw {
    margin-top: 0;
  }
  ._1w7ogsyc0 {
    margin-bottom: var(--_13kdy770);
  }
  ._1w7ogsyc4 {
    margin-bottom: var(--_13kdy771);
  }
  ._1w7ogsyc8 {
    margin-bottom: var(--_13kdy772);
  }
  ._1w7ogsycc {
    margin-bottom: var(--_13kdy773);
  }
  ._1w7ogsycg {
    margin-bottom: var(--_13kdy774);
  }
  ._1w7ogsyck {
    margin-bottom: var(--_13kdy775);
  }
  ._1w7ogsyco {
    margin-bottom: var(--_13kdy776);
  }
  ._1w7ogsycs {
    margin-bottom: var(--_13kdy777);
  }
  ._1w7ogsycw {
    margin-bottom: var(--_13kdy778);
  }
  ._1w7ogsyd0 {
    margin-bottom: 0;
  }
  ._1w7ogsyd4 {
    margin-right: var(--_13kdy770);
  }
  ._1w7ogsyd8 {
    margin-right: var(--_13kdy771);
  }
  ._1w7ogsydc {
    margin-right: var(--_13kdy772);
  }
  ._1w7ogsydg {
    margin-right: var(--_13kdy773);
  }
  ._1w7ogsydk {
    margin-right: var(--_13kdy774);
  }
  ._1w7ogsydo {
    margin-right: var(--_13kdy775);
  }
  ._1w7ogsyds {
    margin-right: var(--_13kdy776);
  }
  ._1w7ogsydw {
    margin-right: var(--_13kdy777);
  }
  ._1w7ogsye0 {
    margin-right: var(--_13kdy778);
  }
  ._1w7ogsye4 {
    margin-right: 0;
  }
  ._1w7ogsye8 {
    margin-left: var(--_13kdy770);
  }
  ._1w7ogsyec {
    margin-left: var(--_13kdy771);
  }
  ._1w7ogsyeg {
    margin-left: var(--_13kdy772);
  }
  ._1w7ogsyek {
    margin-left: var(--_13kdy773);
  }
  ._1w7ogsyeo {
    margin-left: var(--_13kdy774);
  }
  ._1w7ogsyes {
    margin-left: var(--_13kdy775);
  }
  ._1w7ogsyew {
    margin-left: var(--_13kdy776);
  }
  ._1w7ogsyf0 {
    margin-left: var(--_13kdy777);
  }
  ._1w7ogsyf4 {
    margin-left: var(--_13kdy778);
  }
  ._1w7ogsyf8 {
    margin-left: 0;
  }
  ._1w7ogsyfc {
    align-items: flex-start;
  }
  ._1w7ogsyfg {
    align-items: center;
  }
  ._1w7ogsyfk {
    align-items: flex-end;
  }
  ._1w7ogsyfo {
    justify-content: flex-start;
  }
  ._1w7ogsyfs {
    justify-content: center;
  }
  ._1w7ogsyfw {
    justify-content: flex-end;
  }
  ._1w7ogsyg0 {
    justify-content: space-between;
  }
  ._1w7ogsyg4 {
    flex-direction: row;
  }
  ._1w7ogsyg8 {
    flex-direction: row-reverse;
  }
  ._1w7ogsygc {
    flex-direction: column;
  }
  ._1w7ogsygg {
    flex-direction: column-reverse;
  }
  ._1w7ogsygk {
    flex-wrap: wrap;
  }
  ._1w7ogsygo {
    flex-wrap: nowrap;
  }
  ._1w7ogsygs {
    flex-shrink: 0;
  }
  ._1w7ogsygw {
    flex-grow: 0;
  }
  ._1w7ogsyh0 {
    flex-grow: 1;
  }
  ._1w7ogsyh4 {
    text-align: left;
  }
  ._1w7ogsyh8 {
    text-align: center;
  }
  ._1w7ogsyhc {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  ._1w7ogsy4x {
    display: none;
  }
  ._1w7ogsy51 {
    display: block;
  }
  ._1w7ogsy55 {
    display: inline;
  }
  ._1w7ogsy59 {
    display: inline-block;
  }
  ._1w7ogsy5d {
    display: flex;
  }
  ._1w7ogsy5h {
    position: relative;
  }
  ._1w7ogsy5l {
    position: absolute;
  }
  ._1w7ogsy5p {
    position: fixed;
  }
  ._1w7ogsy5t {
    border-radius: 0;
  }
  ._1w7ogsy5x {
    border-radius: 9999px;
  }
  ._1w7ogsy61 {
    border-radius: var(--_13kdy77b);
  }
  ._1w7ogsy65 {
    border-radius: var(--_13kdy77c);
  }
  ._1w7ogsy69 {
    border-radius: var(--_13kdy77d);
  }
  ._1w7ogsy6d {
    border-radius: var(--_13kdy77e);
  }
  ._1w7ogsy6h {
    padding-top: var(--_13kdy770);
  }
  ._1w7ogsy6l {
    padding-top: var(--_13kdy771);
  }
  ._1w7ogsy6p {
    padding-top: var(--_13kdy772);
  }
  ._1w7ogsy6t {
    padding-top: var(--_13kdy773);
  }
  ._1w7ogsy6x {
    padding-top: var(--_13kdy774);
  }
  ._1w7ogsy71 {
    padding-top: var(--_13kdy775);
  }
  ._1w7ogsy75 {
    padding-top: var(--_13kdy776);
  }
  ._1w7ogsy79 {
    padding-top: var(--_13kdy777);
  }
  ._1w7ogsy7d {
    padding-top: var(--_13kdy778);
  }
  ._1w7ogsy7h {
    padding-top: 0;
  }
  ._1w7ogsy7l {
    padding-bottom: var(--_13kdy770);
  }
  ._1w7ogsy7p {
    padding-bottom: var(--_13kdy771);
  }
  ._1w7ogsy7t {
    padding-bottom: var(--_13kdy772);
  }
  ._1w7ogsy7x {
    padding-bottom: var(--_13kdy773);
  }
  ._1w7ogsy81 {
    padding-bottom: var(--_13kdy774);
  }
  ._1w7ogsy85 {
    padding-bottom: var(--_13kdy775);
  }
  ._1w7ogsy89 {
    padding-bottom: var(--_13kdy776);
  }
  ._1w7ogsy8d {
    padding-bottom: var(--_13kdy777);
  }
  ._1w7ogsy8h {
    padding-bottom: var(--_13kdy778);
  }
  ._1w7ogsy8l {
    padding-bottom: 0;
  }
  ._1w7ogsy8p {
    padding-right: var(--_13kdy770);
  }
  ._1w7ogsy8t {
    padding-right: var(--_13kdy771);
  }
  ._1w7ogsy8x {
    padding-right: var(--_13kdy772);
  }
  ._1w7ogsy91 {
    padding-right: var(--_13kdy773);
  }
  ._1w7ogsy95 {
    padding-right: var(--_13kdy774);
  }
  ._1w7ogsy99 {
    padding-right: var(--_13kdy775);
  }
  ._1w7ogsy9d {
    padding-right: var(--_13kdy776);
  }
  ._1w7ogsy9h {
    padding-right: var(--_13kdy777);
  }
  ._1w7ogsy9l {
    padding-right: var(--_13kdy778);
  }
  ._1w7ogsy9p {
    padding-right: 0;
  }
  ._1w7ogsy9t {
    padding-left: var(--_13kdy770);
  }
  ._1w7ogsy9x {
    padding-left: var(--_13kdy771);
  }
  ._1w7ogsya1 {
    padding-left: var(--_13kdy772);
  }
  ._1w7ogsya5 {
    padding-left: var(--_13kdy773);
  }
  ._1w7ogsya9 {
    padding-left: var(--_13kdy774);
  }
  ._1w7ogsyad {
    padding-left: var(--_13kdy775);
  }
  ._1w7ogsyah {
    padding-left: var(--_13kdy776);
  }
  ._1w7ogsyal {
    padding-left: var(--_13kdy777);
  }
  ._1w7ogsyap {
    padding-left: var(--_13kdy778);
  }
  ._1w7ogsyat {
    padding-left: 0;
  }
  ._1w7ogsyax {
    margin-top: var(--_13kdy770);
  }
  ._1w7ogsyb1 {
    margin-top: var(--_13kdy771);
  }
  ._1w7ogsyb5 {
    margin-top: var(--_13kdy772);
  }
  ._1w7ogsyb9 {
    margin-top: var(--_13kdy773);
  }
  ._1w7ogsybd {
    margin-top: var(--_13kdy774);
  }
  ._1w7ogsybh {
    margin-top: var(--_13kdy775);
  }
  ._1w7ogsybl {
    margin-top: var(--_13kdy776);
  }
  ._1w7ogsybp {
    margin-top: var(--_13kdy777);
  }
  ._1w7ogsybt {
    margin-top: var(--_13kdy778);
  }
  ._1w7ogsybx {
    margin-top: 0;
  }
  ._1w7ogsyc1 {
    margin-bottom: var(--_13kdy770);
  }
  ._1w7ogsyc5 {
    margin-bottom: var(--_13kdy771);
  }
  ._1w7ogsyc9 {
    margin-bottom: var(--_13kdy772);
  }
  ._1w7ogsycd {
    margin-bottom: var(--_13kdy773);
  }
  ._1w7ogsych {
    margin-bottom: var(--_13kdy774);
  }
  ._1w7ogsycl {
    margin-bottom: var(--_13kdy775);
  }
  ._1w7ogsycp {
    margin-bottom: var(--_13kdy776);
  }
  ._1w7ogsyct {
    margin-bottom: var(--_13kdy777);
  }
  ._1w7ogsycx {
    margin-bottom: var(--_13kdy778);
  }
  ._1w7ogsyd1 {
    margin-bottom: 0;
  }
  ._1w7ogsyd5 {
    margin-right: var(--_13kdy770);
  }
  ._1w7ogsyd9 {
    margin-right: var(--_13kdy771);
  }
  ._1w7ogsydd {
    margin-right: var(--_13kdy772);
  }
  ._1w7ogsydh {
    margin-right: var(--_13kdy773);
  }
  ._1w7ogsydl {
    margin-right: var(--_13kdy774);
  }
  ._1w7ogsydp {
    margin-right: var(--_13kdy775);
  }
  ._1w7ogsydt {
    margin-right: var(--_13kdy776);
  }
  ._1w7ogsydx {
    margin-right: var(--_13kdy777);
  }
  ._1w7ogsye1 {
    margin-right: var(--_13kdy778);
  }
  ._1w7ogsye5 {
    margin-right: 0;
  }
  ._1w7ogsye9 {
    margin-left: var(--_13kdy770);
  }
  ._1w7ogsyed {
    margin-left: var(--_13kdy771);
  }
  ._1w7ogsyeh {
    margin-left: var(--_13kdy772);
  }
  ._1w7ogsyel {
    margin-left: var(--_13kdy773);
  }
  ._1w7ogsyep {
    margin-left: var(--_13kdy774);
  }
  ._1w7ogsyet {
    margin-left: var(--_13kdy775);
  }
  ._1w7ogsyex {
    margin-left: var(--_13kdy776);
  }
  ._1w7ogsyf1 {
    margin-left: var(--_13kdy777);
  }
  ._1w7ogsyf5 {
    margin-left: var(--_13kdy778);
  }
  ._1w7ogsyf9 {
    margin-left: 0;
  }
  ._1w7ogsyfd {
    align-items: flex-start;
  }
  ._1w7ogsyfh {
    align-items: center;
  }
  ._1w7ogsyfl {
    align-items: flex-end;
  }
  ._1w7ogsyfp {
    justify-content: flex-start;
  }
  ._1w7ogsyft {
    justify-content: center;
  }
  ._1w7ogsyfx {
    justify-content: flex-end;
  }
  ._1w7ogsyg1 {
    justify-content: space-between;
  }
  ._1w7ogsyg5 {
    flex-direction: row;
  }
  ._1w7ogsyg9 {
    flex-direction: row-reverse;
  }
  ._1w7ogsygd {
    flex-direction: column;
  }
  ._1w7ogsygh {
    flex-direction: column-reverse;
  }
  ._1w7ogsygl {
    flex-wrap: wrap;
  }
  ._1w7ogsygp {
    flex-wrap: nowrap;
  }
  ._1w7ogsygt {
    flex-shrink: 0;
  }
  ._1w7ogsygx {
    flex-grow: 0;
  }
  ._1w7ogsyh1 {
    flex-grow: 1;
  }
  ._1w7ogsyh5 {
    text-align: left;
  }
  ._1w7ogsyh9 {
    text-align: center;
  }
  ._1w7ogsyhd {
    text-align: right;
  }
}
.uo8yjc4 {
  font-size: var(--uo8yjc0);
  line-height: var(--uo8yjc1);
}
.uo8yjc4:before {
  content: "";
  display: table;
  margin-bottom: var(--uo8yjc2);
}
.uo8yjc4:after {
  content: "";
  display: table;
  margin-top: var(--uo8yjc3);
}
._84yl190 {
  font-family: var(--_13kdy772w);
}
._84yl191 {
  font-weight: var(--_13kdy7746);
}
._84yl192 {
  font-weight: var(--_13kdy7747);
}
._84yl193 {
  font-weight: var(--_13kdy7748);
}
._84yl194 {
  --uo8yjc0: var(--_13kdy7732);
  --uo8yjc1: var(--_13kdy7733);
  --uo8yjc2: var(--_13kdy7735);
  --uo8yjc3: var(--_13kdy7736);
}
._84yl197 {
  --uo8yjc0: var(--_13kdy773c);
  --uo8yjc1: var(--_13kdy773d);
  --uo8yjc2: var(--_13kdy773f);
  --uo8yjc3: var(--_13kdy773g);
}
._84yl19a {
  --uo8yjc0: var(--_13kdy773m);
  --uo8yjc1: var(--_13kdy773n);
  --uo8yjc2: var(--_13kdy773p);
  --uo8yjc3: var(--_13kdy773q);
}
._84yl19d {
  --uo8yjc0: var(--_13kdy773w);
  --uo8yjc1: var(--_13kdy773x);
  --uo8yjc2: var(--_13kdy773z);
  --uo8yjc3: var(--_13kdy7740);
}
._84yl19g {
  font-size: var(--_13kdy7732);
  line-height: var(--_13kdy7733);
}
._84yl19h {
  font-size: var(--_13kdy773c);
  line-height: var(--_13kdy773d);
}
._84yl19i {
  font-size: var(--_13kdy773m);
  line-height: var(--_13kdy773n);
}
._84yl19j {
  font-size: var(--_13kdy773w);
  line-height: var(--_13kdy773x);
}
._84yl19k {
  font-weight: var(--_13kdy775d);
}
._84yl19l {
  font-weight: var(--_13kdy775e);
}
._84yl19m {
  --uo8yjc0: var(--_13kdy7749);
  --uo8yjc1: var(--_13kdy774a);
  --uo8yjc2: var(--_13kdy774c);
  --uo8yjc3: var(--_13kdy774d);
}
._84yl19p {
  --uo8yjc0: var(--_13kdy774j);
  --uo8yjc1: var(--_13kdy774k);
  --uo8yjc2: var(--_13kdy774m);
  --uo8yjc3: var(--_13kdy774n);
}
._84yl19s {
  --uo8yjc0: var(--_13kdy774t);
  --uo8yjc1: var(--_13kdy774u);
  --uo8yjc2: var(--_13kdy774w);
  --uo8yjc3: var(--_13kdy774x);
}
._84yl19v {
  --uo8yjc0: var(--_13kdy7753);
  --uo8yjc1: var(--_13kdy7754);
  --uo8yjc2: var(--_13kdy7756);
  --uo8yjc3: var(--_13kdy7757);
}
html:not(._1w7ogsyz) ._84yl1918 {
  --_84yl19y: var(--_13kdy7719);
  --_84yl19z: var(--_13kdy7717);
  --_84yl1910: var(--_13kdy771d);
  --_84yl1911: var(--_13kdy771o);
  --_84yl1912: var(--_13kdy771m);
  --_84yl1913: var(--_13kdy7715);
  --_84yl1914: var(--_13kdy771b);
  --_84yl1915: var(--_13kdy771k);
  --_84yl1916: var(--_13kdy771r);
  --_84yl1917: var(--_13kdy771f);
}
html:not(._1w7ogsyz) ._84yl1919 {
  --_84yl19y: var(--_13kdy771a);
  --_84yl19z: var(--_13kdy7718);
  --_84yl1910: var(--_13kdy771e);
  --_84yl1911: var(--_13kdy771p);
  --_84yl1912: var(--_13kdy771n);
  --_84yl1913: var(--_13kdy7716);
  --_84yl1914: var(--_13kdy771c);
  --_84yl1915: var(--_13kdy771l);
  --_84yl1916: var(--_13kdy771s);
  --_84yl1917: var(--_13kdy771h);
}
html._1w7ogsyz ._84yl191a {
  --_84yl19y: var(--_13kdy7719);
  --_84yl19z: var(--_13kdy7717);
  --_84yl1910: var(--_13kdy771d);
  --_84yl1911: var(--_13kdy771o);
  --_84yl1912: var(--_13kdy771m);
  --_84yl1913: var(--_13kdy7715);
  --_84yl1914: var(--_13kdy771b);
  --_84yl1915: var(--_13kdy771k);
  --_84yl1916: var(--_13kdy771r);
  --_84yl1917: var(--_13kdy771f);
}
html._1w7ogsyz ._84yl191b {
  --_84yl19y: var(--_13kdy771a);
  --_84yl19z: var(--_13kdy7718);
  --_84yl1910: var(--_13kdy771e);
  --_84yl1911: var(--_13kdy771p);
  --_84yl1912: var(--_13kdy771n);
  --_84yl1913: var(--_13kdy7716);
  --_84yl1914: var(--_13kdy771c);
  --_84yl1915: var(--_13kdy771l);
  --_84yl1916: var(--_13kdy771s);
  --_84yl1917: var(--_13kdy771h);
}
html:not(._1w7ogsyz) ._84yl191c,
html:not(._1w7ogsyz) ._84yl191d,
html:not(._1w7ogsyz) ._84yl191e,
html:not(._1w7ogsyz) ._84yl191f {
  --_84yl1915: var(--_84yl19y);
}
html:not(._1w7ogsyz) ._84yl191g,
html:not(._1w7ogsyz) ._84yl191h {
  --_84yl1915: var(--_84yl19z);
}
html:not(._1w7ogsyz) ._84yl191i {
  --_84yl1915: var(--_84yl1912);
}
html:not(._1w7ogsyz) ._84yl191j {
  --_84yl1915: var(--_84yl1910);
}
html:not(._1w7ogsyz) ._84yl191k {
  --_84yl1915: var(--_84yl1911);
}
html._1w7ogsyz ._84yl191l,
html._1w7ogsyz ._84yl191m,
html._1w7ogsyz ._84yl191n,
html._1w7ogsyz ._84yl191o {
  --_84yl1915: var(--_84yl19y);
}
html._1w7ogsyz ._84yl191p,
html._1w7ogsyz ._84yl191q {
  --_84yl1915: var(--_84yl19z);
}
html._1w7ogsyz ._84yl191r {
  --_84yl1915: var(--_84yl1912);
}
html._1w7ogsyz ._84yl191s {
  --_84yl1915: var(--_84yl1910);
}
html._1w7ogsyz ._84yl191t {
  --_84yl1915: var(--_84yl1911);
}
._84yl191u {
  color: var(--_84yl19y);
}
._84yl191v {
  color: var(--_84yl19z);
}
._84yl191w {
  color: var(--_84yl1910);
}
._84yl191x {
  color: var(--_84yl1911);
}
._84yl191y {
  color: var(--_84yl1912);
}
._84yl191z {
  color: var(--_84yl1913);
}
._84yl1920 {
  color: var(--_84yl1914);
}
._84yl1921 {
  color: var(--_84yl1915);
}
._84yl1922 {
  color: var(--_84yl1916);
}
._84yl1923 {
  color: var(--_84yl1917);
}
._84yl1924 {
  padding-bottom: calc((var(--_13kdy779) - var(--_13kdy7733)) / 2);
  padding-top: calc((var(--_13kdy779) - var(--_13kdy7733)) / 2);
}
._84yl1925 {
  padding-bottom: calc((var(--_13kdy779) - var(--_13kdy773d)) / 2);
  padding-top: calc((var(--_13kdy779) - var(--_13kdy773d)) / 2);
}
._84yl1926 {
  padding-bottom: calc((var(--_13kdy779) - var(--_13kdy773n)) / 2);
  padding-top: calc((var(--_13kdy779) - var(--_13kdy773n)) / 2);
}
._84yl1927 {
  padding-bottom: calc((var(--_13kdy779) - var(--_13kdy773x)) / 2);
  padding-top: calc((var(--_13kdy779) - var(--_13kdy773x)) / 2);
}
@media screen and (min-width: 740px) {
  ._84yl194 {
    --uo8yjc0: var(--_13kdy7737);
    --uo8yjc1: var(--_13kdy7738);
    --uo8yjc2: var(--_13kdy773a);
    --uo8yjc3: var(--_13kdy773b);
  }
  ._84yl197 {
    --uo8yjc0: var(--_13kdy773h);
    --uo8yjc1: var(--_13kdy773i);
    --uo8yjc2: var(--_13kdy773k);
    --uo8yjc3: var(--_13kdy773l);
  }
  ._84yl19a {
    --uo8yjc0: var(--_13kdy773r);
    --uo8yjc1: var(--_13kdy773s);
    --uo8yjc2: var(--_13kdy773u);
    --uo8yjc3: var(--_13kdy773v);
  }
  ._84yl19d {
    --uo8yjc0: var(--_13kdy7741);
    --uo8yjc1: var(--_13kdy7742);
    --uo8yjc2: var(--_13kdy7744);
    --uo8yjc3: var(--_13kdy7745);
  }
  ._84yl19g {
    font-size: var(--_13kdy7737);
    line-height: var(--_13kdy7738);
  }
  ._84yl19h {
    font-size: var(--_13kdy773h);
    line-height: var(--_13kdy773i);
  }
  ._84yl19i {
    font-size: var(--_13kdy773r);
    line-height: var(--_13kdy773s);
  }
  ._84yl19j {
    font-size: var(--_13kdy7741);
    line-height: var(--_13kdy7742);
  }
  ._84yl19m {
    --uo8yjc0: var(--_13kdy774e);
    --uo8yjc1: var(--_13kdy774f);
    --uo8yjc2: var(--_13kdy774h);
    --uo8yjc3: var(--_13kdy774i);
  }
  ._84yl19p {
    --uo8yjc0: var(--_13kdy774o);
    --uo8yjc1: var(--_13kdy774p);
    --uo8yjc2: var(--_13kdy774r);
    --uo8yjc3: var(--_13kdy774s);
  }
  ._84yl19s {
    --uo8yjc0: var(--_13kdy774y);
    --uo8yjc1: var(--_13kdy774z);
    --uo8yjc2: var(--_13kdy7751);
    --uo8yjc3: var(--_13kdy7752);
  }
  ._84yl19v {
    --uo8yjc0: var(--_13kdy7758);
    --uo8yjc1: var(--_13kdy7759);
    --uo8yjc2: var(--_13kdy775b);
    --uo8yjc3: var(--_13kdy775c);
  }
  ._84yl1924 {
    padding-bottom: calc((var(--_13kdy779) - var(--_13kdy7738)) / 2);
    padding-top: calc((var(--_13kdy779) - var(--_13kdy7738)) / 2);
  }
  ._84yl1925 {
    padding-bottom: calc((var(--_13kdy779) - var(--_13kdy773i)) / 2);
    padding-top: calc((var(--_13kdy779) - var(--_13kdy773i)) / 2);
  }
  ._84yl1926 {
    padding-bottom: calc((var(--_13kdy779) - var(--_13kdy773s)) / 2);
    padding-top: calc((var(--_13kdy779) - var(--_13kdy773s)) / 2);
  }
  ._84yl1927 {
    padding-bottom: calc((var(--_13kdy779) - var(--_13kdy7742)) / 2);
    padding-top: calc((var(--_13kdy779) - var(--_13kdy7742)) / 2);
  }
}
._7blx2v0 {
  --_13kdy770: 24px;
  --_13kdy771: 4px;
  --_13kdy772: 8px;
  --_13kdy773: 12px;
  --_13kdy774: 20px;
  --_13kdy775: 32px;
  --_13kdy776: 48px;
  --_13kdy777: 96px;
  --_13kdy778: 120px;
  --_13kdy779: 44px;
  --_13kdy77a: 4px;
  --_13kdy77b: 2px;
  --_13kdy77c: 4px;
  --_13kdy77d: 6px;
  --_13kdy77e: 10px;
  --_13kdy77f: #e60278;
  --_13kdy77g: #f8b1dc;
  --_13kdy77h: #fdc221;
  --_13kdy77i: #fee384;
  --_13kdy77j: #b91e1e;
  --_13kdy77k: #fb999a;
  --_13kdy77l: #838fa5;
  --_13kdy77m: rgba(159, 176, 245, 0.7);
  --_13kdy77n: #4964e9;
  --_13kdy77o: #9fb0f5;
  --_13kdy77p: #1d559d;
  --_13kdy77q: #98c9f1;
  --_13kdy77r: #2e3849;
  --_13kdy77t: #d2d7df;
  --_13kdy77s: #fff;
  --_13kdy77u: #12784f;
  --_13kdy77v: #8bdec5;
  --_13kdy77w: #512eaa;
  --_13kdy77x: #c6acf5;
  --_13kdy77y: 1px;
  --_13kdy77z: 2px;
  --_13kdy7710: 3px;
  --_13kdy7711: 400px;
  --_13kdy7712: 660px;
  --_13kdy7713: 940px;
  --_13kdy7714: 1280px;
  --_13kdy7715: #e60278;
  --_13kdy7716: #f8b1dc;
  --_13kdy7717: #723d02;
  --_13kdy7718: #fee384;
  --_13kdy7719: #b91e1e;
  --_13kdy771a: #fb999a;
  --_13kdy771b: #4964e9;
  --_13kdy771c: #9fb0f5;
  --_13kdy771d: #1d559d;
  --_13kdy771e: #98c9f1;
  --_13kdy771f: #4964e9;
  --_13kdy771h: #9fb0f5;
  --_13kdy771g: #4964e9;
  --_13kdy771i: #512eaa;
  --_13kdy771j: #c6acf5;
  --_13kdy771k: #2e3849;
  --_13kdy771l: #fff;
  --_13kdy771m: #12784f;
  --_13kdy771n: #8bdec5;
  --_13kdy771o: #512eaa;
  --_13kdy771p: #c6acf5;
  --_13kdy771q: #f57c00;
  --_13kdy771r: #5a6881;
  --_13kdy771s: hsla(0, 0%, 100%, 0.65);
  --_13kdy771t: #f7f8fb;
  --_13kdy771u: #0e131b;
  --_13kdy771v: #0d3880;
  --_13kdy771w: #e60278;
  --_13kdy771x: #cd026b;
  --_13kdy771y: #fd0585;
  --_13kdy771z: #feeffa;
  --_13kdy7720: #fdd7f3;
  --_13kdy7721: #fde3f6;
  --_13kdy7722: #fdc221;
  --_13kdy7723: #fef8de;
  --_13kdy7724: #b91e1e;
  --_13kdy7725: #a31a1a;
  --_13kdy7726: #db1616;
  --_13kdy7727: #ffe3e2;
  --_13kdy7728: #fef3f3;
  --_13kdy7729: #fcdbdb;
  --_13kdy772a: #fde7e7;
  --_13kdy772b: #4964e9;
  --_13kdy772c: #3251e6;
  --_13kdy772d: #5975ff;
  --_13kdy772e: #f4f6fe;
  --_13kdy772f: #dde3fc;
  --_13kdy772g: #e8ecfd;
  --_13kdy772h: #1d559d;
  --_13kdy772i: #e3f2fb;
  --_13kdy772j: #2e3849;
  --_13kdy772k: #242c39;
  --_13kdy772l: #384459;
  --_13kdy772m: #eaecf1;
  --_13kdy772n: #f7f8fb;
  --_13kdy772o: #e6e9f3;
  --_13kdy772p: #eff1f7;
  --_13kdy772q: #12784f;
  --_13kdy772r: #e2f7f1;
  --_13kdy772s: #512eaa;
  --_13kdy772t: #f1e8fd;
  --_13kdy772u: #fff;
  --_13kdy772v: #1c2330;
  --_13kdy772w: Roboto, "Helvetica Neue", HelveticaNeue, Helvetica, Arial,
    sans-serif;
  --_13kdy772x: 1456;
  --_13kdy772y: 1900;
  --_13kdy772z: -500;
  --_13kdy7730: 0;
  --_13kdy7731: 2048;
  --_13kdy7732: 12px;
  --_13kdy7733: 20px;
  --_13kdy7734: 8.5313px;
  --_13kdy7735: -0.4642em;
  --_13kdy7736: -0.4915em;
  --_13kdy7737: 12px;
  --_13kdy7738: 20px;
  --_13kdy7739: 8.5313px;
  --_13kdy773a: -0.4642em;
  --_13kdy773b: -0.4915em;
  --_13kdy773c: 14px;
  --_13kdy773d: 20px;
  --_13kdy773e: 9.9531px;
  --_13kdy773f: -0.3451em;
  --_13kdy773g: -0.3725em;
  --_13kdy773h: 14px;
  --_13kdy773i: 20px;
  --_13kdy773j: 9.9531px;
  --_13kdy773k: -0.3451em;
  --_13kdy773l: -0.3725em;
  --_13kdy773m: 16px;
  --_13kdy773n: 24px;
  --_13kdy773o: 11.375px;
  --_13kdy773p: -0.3809em;
  --_13kdy773q: -0.4082em;
  --_13kdy773r: 16px;
  --_13kdy773s: 24px;
  --_13kdy773t: 11.375px;
  --_13kdy773u: -0.3809em;
  --_13kdy773v: -0.4082em;
  --_13kdy773w: 18px;
  --_13kdy773x: 28px;
  --_13kdy773y: 12.7969px;
  --_13kdy773z: -0.4086em;
  --_13kdy7740: -0.436em;
  --_13kdy7741: 18px;
  --_13kdy7742: 28px;
  --_13kdy7743: 12.7969px;
  --_13kdy7744: -0.4086em;
  --_13kdy7745: -0.436em;
  --_13kdy7746: 400;
  --_13kdy7747: 600;
  --_13kdy7748: 700;
  --_13kdy7749: 28px;
  --_13kdy774a: 36px;
  --_13kdy774b: 19.9063px;
  --_13kdy774c: -0.2737em;
  --_13kdy774d: -0.3011em;
  --_13kdy774e: 42px;
  --_13kdy774f: 44px;
  --_13kdy774g: 29.8594px;
  --_13kdy774h: -0.1547em;
  --_13kdy774i: -0.182em;
  --_13kdy774j: 21px;
  --_13kdy774k: 32px;
  --_13kdy774l: 14.9297px;
  --_13kdy774m: -0.3928em;
  --_13kdy774n: -0.4201em;
  --_13kdy774o: 28px;
  --_13kdy774p: 36px;
  --_13kdy774q: 19.9063px;
  --_13kdy774r: -0.2737em;
  --_13kdy774s: -0.3011em;
  --_13kdy774t: 21px;
  --_13kdy774u: 28px;
  --_13kdy774v: 14.9297px;
  --_13kdy774w: -0.2975em;
  --_13kdy774x: -0.3249em;
  --_13kdy774y: 21px;
  --_13kdy774z: 28px;
  --_13kdy7750: 14.9297px;
  --_13kdy7751: -0.2975em;
  --_13kdy7752: -0.3249em;
  --_13kdy7753: 18px;
  --_13kdy7754: 28px;
  --_13kdy7755: 12.7969px;
  --_13kdy7756: -0.4086em;
  --_13kdy7757: -0.436em;
  --_13kdy7758: 18px;
  --_13kdy7759: 28px;
  --_13kdy775a: 12.7969px;
  --_13kdy775b: -0.4086em;
  --_13kdy775c: -0.436em;
  --_13kdy775d: 400;
  --_13kdy775e: 600;
  --_13kdy775f: none;
  --_13kdy775g: 24px;
  --_13kdy775h: 20px;
  --_13kdy775i: transform 0.125s ease, opacity 0.125s ease;
  --_13kdy775j: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --_13kdy775k: scale(0.95);
  --_13kdy775l: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 2px 2px -2px rgba(28, 35, 48, 0.1), 0 4px 4px -4px rgba(28, 35, 48, 0.2);
  --_13kdy775m: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 8px 8px -4px rgba(28, 35, 48, 0.1), 0 12px 12px -8px rgba(28, 35, 48, 0.2);
  --_13kdy775n: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 12px 12px -4px rgba(28, 35, 48, 0.1),
    0 20px 20px -12px rgba(28, 35, 48, 0.2);
}
.gkzf7k6 {
  background: var(--gkzf7k0);
}
.gkzf7k7 {
  background: var(--gkzf7k1);
}
.gkzf7k8 {
  background: var(--gkzf7k2);
}
.gkzf7k9 {
  background: var(--gkzf7k3);
}
.gkzf7ka {
  background: var(--gkzf7k4);
}
.gkzf7kb {
  background: var(--gkzf7k5);
}
html:not(._1w7ogsyz) .gkzf7kc {
  --gkzf7k0: var(--_13kdy77w);
  --gkzf7k1: var(--_13kdy77p);
  --gkzf7k2: var(--_13kdy77u);
  --gkzf7k3: var(--_13kdy77h);
  --gkzf7k4: var(--_13kdy77j);
  --gkzf7k5: var(--_13kdy77n);
}
html:not(._1w7ogsyz) .gkzf7kd {
  --gkzf7k0: var(--_13kdy77x);
  --gkzf7k1: var(--_13kdy77q);
  --gkzf7k2: var(--_13kdy77v);
  --gkzf7k3: var(--_13kdy77i);
  --gkzf7k4: var(--_13kdy77k);
  --gkzf7k5: var(--_13kdy77o);
}
html._1w7ogsyz .gkzf7ke {
  --gkzf7k0: var(--_13kdy77w);
  --gkzf7k1: var(--_13kdy77p);
  --gkzf7k2: var(--_13kdy77u);
  --gkzf7k3: var(--_13kdy77h);
  --gkzf7k4: var(--_13kdy77j);
  --gkzf7k5: var(--_13kdy77n);
}
html._1w7ogsyz .gkzf7kf {
  --gkzf7k0: var(--_13kdy77x);
  --gkzf7k1: var(--_13kdy77q);
  --gkzf7k2: var(--_13kdy77v);
  --gkzf7k3: var(--_13kdy77i);
  --gkzf7k4: var(--_13kdy77k);
  --gkzf7k5: var(--_13kdy77o);
}
.gkzf7kg {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
.gkzf7kh {
  width: var(--_13kdy77e);
}
.gkzf7ki {
  width: var(--_13kdy77a);
}
._1tov6240 {
  margin-bottom: -0.1em;
}
._1tov6242 {
  text-overflow: ellipsis;
  white-space: nowrap;
}
._1tov6240 ._1tov6242 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  ._1tov6244 {
    display: -webkit-box;
    white-space: normal;
    -webkit-line-clamp: var(--_1tov6243);
    -webkit-box-orient: vertical;
  }
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin start should start a development server 1`] = `
SCRIPTS: [
  "main.js",
]
CSS: [
  "main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script
      defer
      src="scripts[0]"
    >
    </script>
    <link
      href="styles[0]"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>
POST HYDRATE DIFFS: 
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html.sprinkles_darkMode__1w7ogsyz,html.sprinkles_darkMode__1w7ogsyz body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="apacTheme_apac__7blx2v0 typography_lightModeTone_light__84yl1918 typography_darkModeTone_dark__84yl191b">
+        <div class="reset_base__jwlevk0 sprinkles_paddingBottom_gutter_mobile__1w7ogsy7i sprinkles_paddingTop_gutter_mobile__1w7ogsy6e sprinkles_paddingLeft_gutter_mobile__1w7ogsy9q sprinkles_paddingRight_gutter_mobile__1w7ogsy8m sprinkles_position_relative_mobile__1w7ogsy5e typography_lightModeTone_light__84yl1918 typography_darkModeTone_dark__84yl191b sprinkles_background_surface_lightMode__1w7ogsy32 sprinkles_background_surfaceDark_darkMode__1w7ogsy35">
+          <span class="reset_base__jwlevk0 sprinkles_display_block_mobile__1w7ogsy4y typography_fontFamily__84yl190 typography_fontWeight_regular__84yl191 typography_tone_neutral__84yl1921 capsize_capsizeStyle__uo8yjc4 typography_textSize_large__84yl19d">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;
